# Ankh

./: .gitignore  Ankh.sln  Cargo.toml  Dockerfile  IMVU API Reverse Engineering.txt  LICENSE  README.md  docker-compose.yml  requirements.txt
.github/workflows/: dotnet-core.yml
Ankh/: Ankh.csproj  Extensions.cs  Saucery.cs  Spyder.cs
Ankh.Api/: Ankh.Api.csproj  Extensions.cs  Program.cs  RestResponse.cs  Saucery.cs
Ankh.Api/Attributes/: JsonPropertyNames.cs
Ankh.Api/Converters/: AvailabilityConverter.cs  ContentRatingConverter.cs  IntToBoolConverter.cs  NullIntConverter.cs  ProductRatingConverter.cs  RestModelConverter.cs  StringToBoolConverter.cs
Ankh.Api/Handlers/: ProductHandler.cs  RoomHandler.cs  UserHandler.cs
Ankh.Api/Models/: ProductModel.cs  ProductRating.cs  RestModel.cs  RoomModel.cs  UserModel.cs
Ankh.Api/Objects/: RoomObject.cs
Ankh.Backend/: Ankh.Backend.csproj  Ankh.Backend.http  Database.cs  Program.cs  appsettings.json
Ankh.Backend/Controllers/: HistoryController.cs  InfoController.cs  ProductsController.cs  (+1 more)
Ankh.Redis/: Ankh.Redis.csproj  Class1.cs  IServiceCollectionExtensions.cs  RedisClient.cs  RedisClientConnection.cs  RedisClientManager.cs  RedisClientOptions.cs  RedisDatabase.cs
Ankh.Tests/: Ankh.Tests.csproj  Globals.cs  ProductHandlerTests.cs  RoomHandlerTests.cs  UserHandlerTests.cs
src/: Ankh.csproj  App.razor  Database.cs  Endpoints.cs  Extensions.cs  IMVUContext.cs  Program.cs  Repository.cs  RoomCachingService.cs  _Imports.razor  appsettings.json  config.rs  configuration.rs  db.py  imvu.py  main.py  main.rs  routes.rs
(+114 files in other folders)
