[package]
name = "ankh"
version = "0.1.0"
edition = "2021"
authors = "Yucked"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
axum = { version = "0.7.1", features = ["http2", "tokio", "tower-log", "json", "matched-path"] }
scraper = "0.18.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
